--- a/BlogposterCMS/public/assets/scss/components/_buttons.scss
+++ b/BlogposterCMS/public/assets/scss/components/_buttons.scss
@@ -9,7 +9,7 @@
   padding: 14px 32px;
   border: none;
   border-radius: 12px;
-  color: #ffffff;
+  color: var(--color-white);
   font-family: var(--font-body);
   font-size: 14px;
   font-weight: 600;
