fix: safely trim ADMIN_BASE and remove widgets import

--- a/BlogposterCMS/public/assets/scss/components/_header-main.scss
+++ b/BlogposterCMS/public/assets/scss/components/_header-main.scss
@@ -83,6 +83,10 @@
   align-items: center;
 }
 
+body.dashboard-edit-mode .editor-quick-actions {
+  display: flex;
+}
+
 .icon-btn {
   display: inline-flex;
   align-items: center;
