--- a/BlogposterCMS/public/plainspace/partials/content-header-pages.html
+++ b/BlogposterCMS/public/plainspace/partials/content-header-pages.html
@@ -1,7 +1,15 @@
 <div class="content-header">
+  <button id="admin-delete-page" class="icon-btn danger" title="Delete this admin page">
+    <img src="/assets/icons/trash-2.svg" alt="Delete" />
+  </button>
   <div id="content-breadcrumb"></div>
   <div class="content-header-right">
     <img id="newPageBtn" src="/assets/icons/plus.svg" class="icon" alt="New page" />
+    <button id="widgets-toggle-inline" class="icon-btn" title="Add widget">
+      <img src="/assets/icons/plus.svg" alt="Add widget" />
+    </button>
+  </div>
+  <div class="editor-quick-actions">
     <img id="edit-toggle" src="/assets/icons/square-pen.svg" class="icon" alt="Edit layout" />
   </div>
 </div>
