style: align edit toggle button with add widget styling

--- a/BlogposterCMS/public/plainspace/partials/content-header.html
+++ b/BlogposterCMS/public/plainspace/partials/content-header.html
@@ -9,6 +9,8 @@
     </button>
   </div>
   <div class="editor-quick-actions">
-    <img id="edit-toggle" src="/assets/icons/square-pen.svg" class="icon" alt="Edit layout" />
+    <button id="edit-toggle" class="icon-btn" title="Edit layout">
+      <img src="/assets/icons/square-pen.svg" alt="Edit layout" />
+    </button>
   </div>
 </div>
