--- a/BlogposterCMS/public/plainspace/partials/content-header.html
+++ b/BlogposterCMS/public/plainspace/partials/content-header.html
@@ -1,6 +1,22 @@
 <div class="content-header">
-  <button id="admin-delete-page" class="icon-btn danger" title="Delete this admin page">
-    <img src="/assets/icons/trash-2.svg" alt="Delete" />
+  <button id="admin-delete-page" class="icon-btn danger" title="Delete this admin page" aria-label="Delete this admin page">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+      fill="currentColor"
+      stroke="currentColor"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    >
+      <path d="M10 11v6" />
+      <path d="M14 11v6" />
+      <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6" />
+      <path d="M3 6h18" />
+      <path d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2" />
+    </svg>
   </button>
   <div id="content-breadcrumb"></div>
   <div class="content-header-right">
