feat(ui): show floating labels from alt attributes

--- a/BlogposterCMS/public/assets/scss/site.scss
+++ b/BlogposterCMS/public/assets/scss/site.scss
@@ -12,6 +12,7 @@
 @import 'cards';
 @import 'responsive';
 @import 'components/sidebar-bubble';
+@import 'components/floating-labels';
 @import 'components/header-main';
 @import 'components/top-header';
 @import 'components/notification-hub';
