feat: slide-in workspace creation field

--- a/BlogposterCMS/public/assets/scss/components/_inline-add.scss
+++ b/BlogposterCMS/public/assets/scss/components/_inline-add.scss
@@ -96,7 +96,8 @@
   height: 24px;
 }
 
-#subpage-floating-field {
+#subpage-floating-field,
+#workspace-floating-field {
   background: var(--color-white);
   padding: 8px;
   border-radius: 8px;
