--- a/BlogposterCMS/public/assets/scss/pages/_install.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_install.scss
@@ -26,6 +26,15 @@
   display: block;
 }
 
+.actions {
+  display: flex;
+  gap: 8px;
+
+  .button {
+    flex: 1 1 auto;
+  }
+}
+
 .color-picker-toggle {
   width: 40px;
   height: 40px;
