fix install wizard step visibility

--- a/BlogposterCMS/public/assets/scss/components/_forms.scss
+++ b/BlogposterCMS/public/assets/scss/components/_forms.scss
@@ -1,4 +1,4 @@
-.app-scope form {
+.app-scope form:not(.step) {
   display: flex;
   flex-direction: column;
   gap: 8px; /* optimaler Abstand zwischen Feldern */
