--- a/BlogposterCMS/public/assets/scss/pages/_install.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_install.scss
@@ -65,6 +65,10 @@
   justify-content: center;
 }
 
+.login-form .actions .button.primary {
+  min-width: 140px;
+}
+
 .color-picker-toggle {
   width: 40px;
   height: 40px;
