--- a/BlogposterCMS/public/assets/scss/pages/_install.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_install.scss
@@ -69,6 +69,12 @@
   min-width: 140px;
 }
 
+.app-scope.install-page .button.primary {
+  --bg: var(--color-border);
+  --fg: var(--color-text);
+  --bd: var(--color-border);
+}
+
 .color-picker-toggle {
   width: 40px;
   height: 40px;
